[package]
name = "mapfmclient_bindings"
version = "0.1.0"
authors = ["jonay2000 <jonabent@gmail.com>"]
edition = "2018"
build = "src/build.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["cbindgen-on"]
cbindgen-on = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.25"
num-traits = "0.2.14"
impl_ops = "0.1.1"
serde = {version="1.0.126", features=["derive"]}
libc = "0.2.97"

reqwest = {version="0.11.3", features=["blocking", "json"]}

[build-dependencies]
cbindgen = "0.19.0"